# rustos

./: .gitignore  Cargo.toml  README.md  nmap_output
.github/workflows/: rust.yml
cargo/: config
config/: redis.conf
src/: hardware.rs  main.rs  node.rs  test.rs
src/hardware/: device.rs  io.rs
src/hardware/io/: input.rs  output.rs
src/hardware/network/: device.rs
src/kore/: mod.rs  panic.rs
src/kore/arch/: mod.rs
src/kore/arch/x86_84/: cpu.rc
src/kore/std/: io.rs
src/model/: object.rs
src/node/: config.rs  node.rs
src/udp/: udp_server.rs
