[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
gethostname = "0.5.0"
os_str_bytes = "7.0"
os-str-generic ="0.2.0"